# pricer

./: .gitignore  ConvertToHDF5.py  CorrectMarking.py  Crop&Normalize_Image.py  CropAndNormalizeImages.py  IncreaseData.py  IncreaseDataWithoutCoordinates.py  MarkPoints.py  ShowBounties.py  requirements.txt  run_server_store.sh
localisation_train_utils/: deploy_pricer_net.py  deploy_rubli_net.py
localisation_train_utils/pricer_net/: convertDataToHdf5.py  get_rect.py  train.py
localisation_train_utils/rubli_net/: get_rect.py  train.py
marking_tools/: crop_pricer_fields.py  crop_pricer_quadrants.py  crop_pricers.py  dataset_utils.py  db_editor.py  gen_pricer_loc_dataset.py  generate_hdf5.py  generate_lmdb.py  generate_symbol_lmdb.py  increase_data.py  markers_db_tools.py  os_utils.py  process_marking.py  symbol_manual_marking.py
marking_tools/gui/: db_editor.py  pricer_type_marker.py  (+2 more)
ml_data/: download.sh
pricer_borders/: detect_batch.py  detect_pricer.py  run.py  settings.py  windows.py
recognition_train_utils/: deploy_price_1_net.py  deploy_price_2_net.py  deploy_symbols_net.py  parse_log.py
server/: beorg_net_utils.py  localisation_utils.py  server.py  server_store.py  server_test.py
split/: gen_ruble_dataset.py  get_marking.py  split_symbols_cv.py
symbol_split_utils/: extract_text_lines.py  otsu.py  split_hist.py  split_symbols.py  train_dtree.py
symbol_split_utils/nm_dataset_builder/: CMakeLists.txt  build_csv_datasetNM1.py  build_csv_datasetNM2.py  deploy.py
trained_nets/: download.sh
utils/: filters.py  geom_functions.py  sci_window.py
(+29 files in other folders)
